the bridge between java and mongodb through Jinterface is almost done for first version